--- a/style.css
+++ b/style.css
@@ -122,8 +122,8 @@ body {
 }
 .info-item a {
     text-decoration: none; /* Remove sublinhado dos links */
-    color: #007bff; /* Cor dos links */
-    font-weight: 600;
+    color: #000000; /* Cor dos links */
+    font-weight: 100;
 }
 .info-item a:hover {
     text-decoration: underline; /* Adiciona sublinhado ao passar o mouse */
@@ -197,7 +197,8 @@ body {
 .portfolio-item .card-img-top {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    object-fit: cover; /* Garante que as imagens dos projetos se encaixem bem no espaço */
+    object-fit: cover;
+    object-position: center top; /* Garante que as imagens dos projetos se encaixem bem no espaço */
     height: 180px; /* Altura fixa para as imagens do portfólio */
 }
 .portfolio-item .card-title {
